# Real-Time-Object-Detection-Using-Hardware-Accelerated-CNN-on-Xilinx-Zynq-FPGA-with-Arm-Processor

./: .analytics  README.md  mnist_train.py  realtime_detection.py
.metadata/: version.ini
MNIST_Inference/: MNIST_Inference.sln
MNIST_Inference/MNIST_Inference/: MNIST_Inference.cpp  MNIST_Inference.vcxproj  MNIST_Inference.vcxproj.filters  fc_weights.h
cnn_fpga_test_v/: .cproject  .project
cnn_fpga_test_v/_ide/: hwspec.checksum
cnn_fpga_test_v/src/: conv1_weights.h  main.cpp  test_image.h
cnn_fpga_test_v3/: .cproject  .project
cnn_fpga_test_v3/src/: lscript.ld  main.cpp
cnn_fpga_test_v3_system/: .cproject  .project
cnn_fpga_test_v_system/: .cproject  .project
conv2d/: .cproject  .project  conv2d.prj
conv2d/_ide/: hwspec.checksum
conv2d_system/: .cproject  .project  conv2d_system.sprj
hls_component/: compile_commands.json  conv2d.cpp  conv2d_tb.cpp  hls_config.cfg
mnist_cnn_zedboard/: .cproject  .project  mnist_cnn_zedboard.prj
mnist_cnn_zedboard_system/: .cproject  .project  mnist_cnn_zedboard_system.sprj
weights/: conv2_weights.h
zedboard_fpga_platform/: .cproject  .project  platform.spr  platform.tcl
zedboard_fpga_platform_v2/: .cproject  .project  platform.spr  platform.tcl
zedboard_fpga_platform_v3/: .cproject  .project  platform.spr  platform.tcl
zedboard_fpga_platform_v3/ps7_cortexa9_0/standalone_domain/bsp/ps7_cortexa9_0/libsrc/conv2d_v1_0/src/: CMakeLists.txt
zedboard_platform/: .cproject  .project  platform.spr  platform.tcl
zynq_cnn_basek/: system_wrapper.xsa  vivado.jou  vivado_18708.backup.jou  zynq_cnn_basek.xpr
(+950 files in other folders)
